[package]
name = "verify-same-kmer-content"
description = "Verify that an SPSS has the same kmer content as a set of unitigs"
version = "1.0.0"
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
