[package]
name = "verify-same-kmer-content"
description = "Verify that an SPSS has the same kmer content as a set of unitigs"
version = "1.1.2"
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.64.0"
repository = "https://github.com/sebschmi/verify-same-kmer-content"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
bitvec = "1.0.1"
